# llm-mr

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: check.yml  publish.yml
docs/: release.md
docs/adr/: 2026-03-13-batching_and_recursive_reduce.md  2026-03-13-data_materialization_and_row_identity.md  2026-03-13-error_handling_and_repair.md  2026-03-13-expression_sandbox.md  2026-03-13-format_detection_and_piping.md  2026-03-13-i_o_plugin_architecture.md  2026-03-13-model_roles.md  2026-03-13-packaging_and_dependencies.md  2026-03-13-three_execution_modes.md  2026-03-24-incremental_output_and_resume.md  2026-03-25-batch_timeout.md  README.md  TEMPLATE.md
llm_mr/: __init__.py  hookspecs.py  io_plugins.py  plugin.py  processors.py  registries.py
tests/: test_plugin.py
