[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[project]
name = "llm-mr"
version = "0.1.0"
description = "Map-reduce spreadsheet operations powered by LLM prompts"
readme = "README.md"
license = "MIT"
authors = [{ name = "Jack Cushman" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
  "click>=7.0",
  "llm>=0.23",
  "openpyxl>=2.4",
  "pluggy>=0.9.0",
]

[project.entry-points.llm]
mr = "llm_mr.plugin"

[project.urls]
Homepage = "https://github.com/jcushman/llm-mr"
Repository = "https://github.com/jcushman/llm-mr"
Issues = "https://github.com/jcushman/llm-mr/issues"
Changelog = "https://github.com/jcushman/llm-mr/blob/main/CHANGELOG.md"

[tool.uv]
package = true

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = [
  "ruff>=0.7.0",
  "pytest>=8.3",
]
